<resources>

    <string name="app_name">SaYi</string>
    <string name="action_settings">Settings</string>
    <string name="action_plus">plus</string>
    <string name="account_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="password_hint_new">输入新的密码</string>
    <string name="password_hint_old">输入当前密码</string>
    <string name="password_hint_again">再依次输入密码</string>
    <string name="email_hint">电子邮箱</string>
    <string name="nickname_hint">昵称</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="server_address_hint">服务器地址</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="friend">  联系人</string>
    <string name="chatroom">  聊天室</string>
    <string name="chatroom_name_hint">  聊天室名称</string>
    <string name="chatroom_create_text">创建聊天室</string>
    <string name="chatroom_enter_text">进入聊天室</string>    
    <string name="password_edit_text">修改密码</string>   
    <string name="blacklist_text">黑名单</string>
    <string name="colon">  :  </string>
    <drawable name="main_actionbar_color">#32B4FF</drawable>
</resources>
