<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_hint" 
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/register_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:layout_marginStart="70dp"
        android:hint="@string/account_hint"
        android:drawableStart="@drawable/login_user">
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname_hint" 
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/register_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="70dp"
        android:hint="@string/nickname_hint" 
        android:drawableStart="@drawable/nickname"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_hint" 
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="textEmailAddress"
        android:layout_marginStart="70dp"
        android:hint="@string/email_hint"
        android:drawableStart="@drawable/email"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_hint" 
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginStart="70dp"
        android:hint="@string/password_hint"
        android:drawableStart="@drawable/login_password" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_hint_again" 
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/register_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" 
        android:layout_marginStart="70dp"
        android:hint="@string/password_hint_again"
        android:drawableStart="@drawable/login_password"/>
    
    <Button 
        android:id="@+id/register"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:text="@string/register"
        android:background="@drawable/button_blue_bg"
        android:textColor="#FFFFFF"/>

</LinearLayout>
