<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="90dp"
    android:orientation="horizontal"
    >
    <EditText
    android:id="@+id/server_address"
    android:layout_width="match_parent"
    android:hint="@string/server_address_hint"
     android:layout_height="wrap_content"
    />

<RelativeLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/server_address"
         android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">
      <Button
    android:id="@+id/server_address_confirm"
     android:layout_width="wrap_content"
     android:layout_height="30dp"
     android:text="@string/confirm" 
     android:layout_alignParentStart="true"
        android:background="@drawable/button_blue_bg"/>"
  <Button
    android:id="@+id/server_address_cancel"
     android:layout_width="wrap_content"
     android:layout_height="30dp"
     android:text="@string/cancel" 
            android:layout_alignParentEnd="true"
        android:background="@drawable/button_blue_bg"/>
    </RelativeLayout>
</RelativeLayout>