<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.saprta1029.sayi.activity.LoginActivity" 
    >
    
    <ImageView
        android:id="@+id/login_avatar"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/default_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>
    
    <RelativeLayout 
        android:id="@+id/login_main"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/login_avatar">
    <LinearLayout
        android:id="@+id/user_info"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <cn.sparta1029.sayi.components.DeletableAutoCompleteTextView
            android:id="@+id/account"
            android:singleLine="true"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:hint="@string/account_hint"
            android:layout_margin="2dp"/>

        <EditText 
            android:id="@+id/password"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:layout_margin="2dp"
            android:drawableStart="@drawable/login_password"/>
         <TextView 
            android:id="@+id/serverText"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:text="@string/server_address_hint"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <RelativeLayout 
        android:id="@+id/login_state"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/user_info"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
         <CheckBox 
            android:id="@+id/remember_password"
            android:text="@string/remember_password"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_alignParentStart="true"
></CheckBox>
            <CheckBox 
            android:id="@+id/auto_login"
            android:text="@string/auto_login"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_alignParentEnd="true"
></CheckBox>
    </RelativeLayout>
    
    <Button 
        android:id="@+id/login"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/login"
        android:layout_below="@id/login_state"
        android:background="@drawable/button_blue_bg"
        android:textColor="#FFFFFF"/>
    </RelativeLayout>
    
</RelativeLayout>

