<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:focusableInTouchMode="true" >
     <EditText 
        android:id="@+id/profile_password_old"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/password_hint_old"
        android:textColor="#333333"
        android:textColorHint="#333333"
        android:background="#eeeeee"
        android:drawableStart="@drawable/login_password"
        android:inputType="textPassword"/>
     <EditText 
        android:id="@+id/profile_password_new"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint_new"
        android:drawableStart="@drawable/login_password"
        android:textColor="#333333"
        android:textColorHint="#333333"
        android:background="#eeeeee"/>
     
     <EditText 
        android:id="@+id/profile_password_new_again"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint_again"
        android:drawableStart="@drawable/login_password"
        android:textColor="#333333"
        android:textColorHint="#333333"
        android:background="#eeeeee"/>
     <Button 
        android:id="@+id/profile_password_confirm"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:text="@string/confirm" 
        android:layout_marginTop="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/button_blue_bg"
        android:textColor="#FFFFFF"/>
   
</LinearLayout>